--- a/100_projects/CSS_2D.html
+++ b/100_projects/CSS_2D.html
@@ -76,15 +76,15 @@
         </header>
         <main>
             <p>translate</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="translate">
+            <img src="../assets/the_little_silver_poodle.JPG" class="translate">
             <p>scale</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="scale">
+            <img src="../assets/the_little_silver_poodle.JPG" class="scale">
             <p>rotate</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="rotate">
+            <img src="../assets/the_little_silver_poodle.JPG" class="rotate">
             <p>skew</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="skew">
+            <img src="../assets/the_little_silver_poodle.JPG" class="skew">
             <p>transform origin</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="transform_origin">
+            <img src="../assets/the_little_silver_poodle.JPG" class="transform_origin">
         </main>
     </body>
 </html>
