--- a/100_projects/CSS_3D.html
+++ b/100_projects/CSS_3D.html
@@ -38,8 +38,8 @@
         </header>
         <main>
             <p>Z-aksen</p>
-            <img src="/assets/the_little_silver_poodle.JPG" class="z-aksen">
-            <img src="/assets/the_little_silver_poodle.JPG" class="rotate">
+            <img src="../assets/the_little_silver_poodle.JPG" class="z-aksen">
+            <img src="../assets/the_little_silver_poodle.JPG" class="rotate">
         </main>
     </body>
 </html>
