--- a/100_projects/creative_buttons/swipe_button.html
+++ b/100_projects/creative_buttons/swipe_button.html
@@ -21,8 +21,31 @@
                 padding: 40px 80px;
                 position: relative;
                 transition: all 1s;
+                overflow: hidden;
             }
-            
+
+            a::before {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 0;
+                height: 100%;
+                width: 100%;
+                background-color: #351434;
+                z-index: -1;
+                transform: translateX(-100%); /* 100% gjør at boksen kommer fra høyre til venstre*/
+                /*translateY vil gjøre at den kommer topp til bunn eller omvendt.*/
+                transition: all 1s;
+            }
+
+            a:hover::before {
+                transform: translateX(0);
+                
+            }
+
+            a:hover {
+                color: white;
+            }
         </style>
     </head>
     <body>
