--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section>
                 <h3><a href="./100_projects/CSS_3D.html">CSS 3D</a></h3>
                 <p>
-                    3D effect.
+                    3D effect, z-aksen.
                 </p>
             </section>
             <section>
